<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paragraph_edit_box"
    android:orientation="vertical"
    tools:context=".ParagraphEditDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/paragraph_edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight=".5"
            android:text="@string/editor"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/close_edit"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_baseline_close_24" />

    </LinearLayout>


    <!--    <LinearLayout-->
    <!--        android:id="@+id/paragraph_edit_layout0"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal"-->
    <!--        android:padding="8dp">-->

    <!--        <EditText-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content" />-->
    <!--    </LinearLayout>-->

    <LinearLayout
        android:id="@+id/paragraph_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@drawable/ic_baseline_edit_24" />

        <EditText
            android:id="@+id/edit_window"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="2"
            android:text="@string/add_text_label"
            android:textSize="16sp"

            />

        <!--        <Button-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="right"-->
        <!--            android:layout_weight=".1"-->
        <!--            android:text="save"-->
        <!--            android:visibility="gone" />-->

    </LinearLayout>


    <LinearLayout
        android:id="@+id/paragraph_edit_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_category_24" />

        <TextView
            android:id="@+id/category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/category"
            android:textSize="16sp"

            />

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="italic"

            />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="15dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/paragraph_edit_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight=".7"
            android:src="@drawable/ic_baseline_tag_24" />

        <!--        <TextView-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginLeft="30dp"-->
        <!--            android:layout_weight="1.5"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:text="tags:"-->
        <!--            android:textSize="16sp"-->

        <!--            />-->

        <HorizontalScrollView
            android:id="@+id/tag_holder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4">

            <LinearLayout
                android:id="@+id/tag_clipboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>
        </HorizontalScrollView>

        <Spinner
            android:id="@+id/tag_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="15dp"
            android:layout_weight="3" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/cut_paragraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/settings"
            android:textSize="16sp"

            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/db_settings"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_baseline_settings_24" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/remove"
            android:textSize="16sp"

            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/text_remove"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_baseline_delete_forever_24" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/cut"
            android:textSize="16sp"

            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/crop"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_baseline_content_cut_24"
            android:rotation="@integer/material_motion_duration_long_1" />


    </LinearLayout>


</LinearLayout>


